Feature deleeting a single entry

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button class="dark_mode_btn"><i class="fa fa-moon-o" aria-hidden="true"></i></button>
         <p id="history"><i class="fa fa-history" aria-hidden="true"></i>&nbsp;History</p>
     </div> 
-    <div class="main mb-4">
+    <div class="main">
         <h2 id="result"></h2>
         <div class="buttons">
               <button id="clear">C</button> 
